--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+#
+#JDBC properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/payment_directory?useSSl=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Arinpaul@123
