--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/payment_directory?useSSl=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Arinpaul@123
+
+server.error.include-message=always
