--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #
 #JDBC properties
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/payment_directory?useSSl=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/PAYMENTSERVICE?useSSl=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Arinpaul@123
 
