--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ target/
 *.iws
 *.iml
 *.ipr
-*.properties
+.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -33,4 +33,5 @@ build/
 
 ### VS Code ###
 .vscode/
-application.properties
+application.properties/
+/src/main/resources/
