--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@
 spring.datasource.name=test
 spring.datasource.url=jdbc:mysql://localhost:3306/payment_service
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Arinpaul@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
