--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,9 @@
 spring.datasource.name=test
 spring.datasource.url=jdbc:mysql://localhost:3306/payment_service
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=Arinpaul@123
-=======
-spring.datasource.password=password=
->>>>>>> fd42d72e1b84034baa8703db5ec54a5c3a32dd49
+
+spring.datasource.password=password
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
